<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalcularIMCActivity" >

    <TextView
        android:id="@+id/textview_peso"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textview_peso" />

    <EditText
        android:id="@+id/editext_peso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_hint_peso" />

    <TextView
        android:id="@+id/textview_altura"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textview_altura" />

    <EditText
        android:id="@+id/editext_altura"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_hint_altura" />

    <Button
        android:id="@+id/botao_calcular"
        style="@style/botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_botao_calcular" />

    <EditText
        android:id="@+id/editext_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/label_hint_IMC" />

</LinearLayout>